--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 text-transform: uppercase; font-family: Arial, Helvetica, sans-serif; font-weight: 400; line-height: 1.5em; font-size: large; white-space: nowrap;
                 user-select: none; pointer-events: none;
             ">
-            Press here
+            Натисніть на екран для отримання доступу
             <br>
-            to enter the experience
+            до WebAR-буклету «Логаріфмічна лінійка Роберта Біссакара»
         </div>
     </div>
 
